syntax = "proto3";

package pb;

import "watchlist.proto";

option go_package = "github.com/jakub/aioportal/server/pb";

message UpdateWatchlistRequest {
  int64 id = 1;
  string name = 2;
}

message UpdateWatchlistResponse {
  Watchlist watchlist = 1;
}